welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: not found: value longueurTableau
  for (l <- 1 to longueurTableau -1) {
                 ^